presentation-client/kube/overlays/prod/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presentation-static-files
spec:
  rules:
  - host: apps.v2tools.com
    http:
      paths:
      - path: /presentations
        backend:
          serviceName: presentation-static-files
          servicePort: http
  tls:
  - hosts:
    - apps.v2tools.com
    secretName: apps-v2tools-crt
